[gd_scene load_steps=15 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://environment.tres" type="Environment" id=2]
[ext_resource path="res://addons/vr-common/misc/VR_Common_Shader_Cache.tscn" type="PackedScene" id=3]
[ext_resource path="res://misc/Table.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/godot-openvr/scenes/ovr_first_person.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/vr-common/functions/Function_Direct_movement.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/vr-common/functions/Function_Teleport.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/vr-common/functions/Function_Pickup.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/kenny.nl/kenney_natureKit/Godot/kenney_naturekit_tileset.meshlib" type="MeshLibrary" id=9]
[ext_resource path="res://assets/kenny.nl/kenney_natureKit/Godot/natureKit-leaves.material" type="Material" id=10]
[ext_resource path="res://misc/Uzi.tscn" type="PackedScene" id=11]
[ext_resource path="res://misc/UziMag.tscn" type="PackedScene" id=12]

[sub_resource type="PlaneMesh" id=1]
material = ExtResource( 10 )
size = Vector2( 10, 10 )
subdivide_width = 10
subdivide_depth = 10

[sub_resource type="BoxShape" id=2]
extents = Vector3( 100, 0.1, 100 )

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.819152, 0.0996005, -0.564862, 0, 0.984808, 0.173648, 0.573576, -0.142244, 0.806707, 0, 100, 0 )
light_energy = 2.0
shadow_enabled = true

[node name="Ground" type="StaticBody" parent="."]
collision_layer = 2
collision_mask = 0

[node name="Mesh" type="MeshInstance" parent="Ground"]
transform = Transform( 100, 0, 0, 0, 100, 0, 0, 0, 100, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0 )
shape = SubResource( 2 )

[node name="Terrain" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, 0 )
mesh_library = ExtResource( 9 )
cell_size = Vector3( 10, 2.5, 10 )
collision_layer = 2
collision_mask = 0
data = {
"cells": PoolIntArray( 0, 0, -2146435024, 1, 0, -2146435026, 2, 0, -2146435023, 3, 0, -2147483610, 4, 0, -2146828283, 5, 0, -2146828283, 6, 0, -2147483643, 65532, 0, -2146435067, 65533, 0, -2147483610, 65534, 0, -2146828240, 65535, 0, -2146041813, 65539, 0, -2146435058, 65540, 0, -2147483645, 65541, 0, -2146828285, 131069, 0, -2146041830, 393213, 0, -2146041826, 0, 1, -2146041810, 1, 1, -2146041808, 2, 1, -2147483599, 3, 1, -2147483610, 4, 1, -2146828283, 5, 1, -2146828283, 6, 1, -2147483643, 65532, 1, -2146435067, 65533, 1, -2147483610, 65534, 1, -2146041807, 65535, 1, -2146041808, 65539, 1, -2146435058, 65540, 1, -2147483645, 65541, 1, -2146828285, 131069, 1, -2147483639, 0, 2, -2146435028, 1, 2, -2146435067, 2, 2, -2147483610, 3, 2, -2147483610, 4, 2, -2146828283, 5, 2, -2146828283, 6, 2, -2147483643, 65532, 2, -2146435067, 65533, 2, -2147483610, 65534, 2, -2147483643, 65535, 2, -2146041818, 65536, 2, -2147483630, 65537, 2, -2147483646, 65538, 2, -2147483646, 65539, 2, -2146435057, 65540, 2, -2147483645, 65541, 2, -2146828285, 131069, 2, -2147483641, 131070, 2, -2147483646, 131071, 2, -2147483646, 327680, 2, -2147483629, 327681, 2, -2147483631, 327682, 2, -2147483631, 327683, 2, -2147483639, 393213, 2, -2146435063, 393214, 2, -2147483631, 393215, 2, -2147483631, 0, 3, -2147483602, 1, 3, -2146828283, 2, 3, -2146828283, 3, 3, -2146828283, 4, 3, -2146828283, 5, 3, -2146828283, 6, 3, -2147483643, 65532, 3, -2146435067, 65533, 3, -2146828283, 65534, 3, -2146828283, 65535, 3, -2146828283, 65536, 3, -2147483645, 65537, 3, -2147483645, 65538, 3, -2147483645, 65539, 3, -2147483645, 65540, 3, -2147483645, 65541, 3, -2146828285, 131069, 3, -2147483645, 131070, 3, -2147483645, 131071, 3, -2147483645, 327683, 3, -2147483641, 393213, 3, -2146435065, 524288, 3, -2147483609, 524289, 3, -2147483643, 524290, 3, -2147483643, 589822, 3, -2147483643, 589823, 3, -2147483643, 0, 4, -2146435067, 1, 4, -2146435067, 2, 4, -2146435067, 3, 4, -2146435067, 4, 4, -2146435067, 5, 4, -2146435068, 6, 4, -2147483643, 65532, 4, -2146435067, 65533, 4, -2146435067, 65534, 4, -2146435067, 65535, 4, -2146435067, 65536, 4, -2146435069, 65537, 4, -2146435069, 65538, 4, -2146435069, 65539, 4, -2146435069, 65540, 4, -2146435069, 65541, 4, -2146435069, 131069, 4, -2146435069, 131070, 4, -2146435069, 131071, 4, -2146435069, 327680, 4, -2146435069, 327681, 4, -2146435069, 327682, 4, -2146435069, 327683, 4, -2146435069, 327684, 4, -2147483641, 327685, 4, -2147483639, 393213, 4, -2146435069, 393214, 4, -2146435069, 393215, 4, -2146435069, 0, 65529, -2147483643, 1, 65529, -2147483643, 2, 65529, -2147483643, 3, 65529, -2147483643, 4, 65529, -2147483643, 5, 65529, -2147483643, 6, 65529, -2147483643, 65532, 65529, -2147483643, 65533, 65529, -2147483643, 65534, 65529, -2147483643, 65535, 65529, -2147483643, 0, 65530, -2146828283, 1, 65530, -2146828283, 2, 65530, -2146828283, 3, 65530, -2146828283, 4, 65530, -2146828283, 5, 65530, -2146828283, 6, 65530, -2147483643, 65532, 65530, -2146435067, 65533, 65530, -2146828283, 65534, 65530, -2146828283, 65535, 65530, -2146828283, 65536, 65530, -2146041831, 65539, 65530, -2146435037, 65540, 65530, -2146828267, 65541, 65530, -2146828267, 131069, 65530, -2146828267, 131070, 65530, -2146828267, 131071, 65530, -2146828267, 393213, 65530, -2146828265, 393214, 65530, -2146041827, 458749, 65530, -2146828265, 0, 65531, -2146828283, 1, 65531, -2146828283, 2, 65531, -2146828283, 3, 65531, -2146828283, 4, 65531, -2146828283, 5, 65531, -2146828283, 6, 65531, -2147483643, 65532, 65531, -2146435067, 65533, 65531, -2146828283, 65534, 65531, -2146828283, 65535, 65531, -2146828283, 65536, 65531, -2146041829, 65539, 65531, -2146828261, 65540, 65531, -2146828263, 65541, 65531, -2146828267, 131069, 65531, -2146828267, 131070, 65531, -2146828267, 131071, 65531, -2146041831, 393213, 65531, -2146828259, 393214, 65531, -2146041826, 0, 65532, -2146828250, 1, 65532, -2146828243, 2, 65532, -2146828250, 3, 65532, -2146828250, 4, 65532, -2146828283, 5, 65532, -2146828283, 6, 65532, -2147483643, 65532, 65532, -2146435067, 65533, 65532, -2146828250, 65534, 65532, -2146828250, 65535, 65532, -2146828250, 65540, 65532, -2146828261, 65541, 65532, -2146828253, 131069, 65532, -2146828267, 131070, 65532, -2146041831, 131071, 65532, -2146041829, 0, 65533, -2146828250, 1, 65533, -2147483609, 2, 65533, -2147483610, 3, 65533, -2147483610, 4, 65533, -2146828283, 5, 65533, -2146828283, 6, 65533, -2147483643, 65532, 65533, -2146435067, 65533, 65533, -2146828250, 65534, 65533, -2146828250, 65535, 65533, -2146828250, 65540, 65533, -2146435064, 65541, 65533, -2147483646, 131069, 65533, -2146041831, 131070, 65533, -2146041829, 327684, 65533, -2146435060, 327685, 65533, -2147483637, 393213, 65533, -2147483618, 0, 65534, -2147483610, 1, 65534, -2147483601, 2, 65534, -2147483610, 3, 65534, -2147483610, 4, 65534, -2146828283, 5, 65534, -2146828283, 6, 65534, -2147483643, 65532, 65534, -2146435067, 65533, 65534, -2147483610, 65534, 65534, -2147483610, 65535, 65534, -2147483610, 65540, 65534, -2147483645, 131069, 65534, -2146041836, 327684, 65534, -2146435061, 393213, 65534, -2146041827, 393221, 65534, -2146828283, 0, 65535, -2146435034, 1, 65535, -2147483608, 2, 65535, -2147483610, 3, 65535, -2147483610, 4, 65535, -2146828283, 5, 65535, -2147483643, 6, 65535, -2147483643, 65532, 65535, -2146435021, 65533, 65535, -2147483610, 65534, 65535, -2146828239, 65535, 65535, -2146435023, 65539, 65535, -2146435056, 65540, 65535, -2147483645, 65541, 65535, -2146828285, 131069, 65535, -2146041828, 327684, 65535, -2146828276, 327685, 65535, -2146828277, 393213, 65535, -2146041827 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="Objects" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )
mesh_library = ExtResource( 9 )
cell_size = Vector3( 10, 2.5, 10 )
collision_layer = 2
data = {
"cells": PoolIntArray( 1, 65530, -2146828231, 2, 65531, -2146828228, 3, 65531, -2146828233, 3, 65532, -2146435019, 3, 65533, -2146435019, 1, 65534, -2147483648 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="OVRFirstPerson" parent="." instance=ExtResource( 5 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 2.5, -13.5 )

[node name="vr_common_shader_cache" parent="OVRFirstPerson/ARVRCamera/shader_cache" index="5" instance=ExtResource( 3 )]

[node name="Function_Teleport" parent="OVRFirstPerson/Left_Hand" index="1" instance=ExtResource( 7 )]
collision_mask = 1048574
camera = NodePath("../../ARVRCamera")

[node name="Function_Pickup" parent="OVRFirstPerson/Left_Hand" index="2" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )
collision_mask = 4

[node name="Function_Direct_movement" parent="OVRFirstPerson/Right_Hand" index="1" instance=ExtResource( 6 )]
camera = NodePath("../../ARVRCamera")
canFly = false

[node name="KinematicBody" parent="OVRFirstPerson/Right_Hand/Function_Direct_movement" index="0"]
collision_mask = 30

[node name="Function_Pickup" parent="OVRFirstPerson/Right_Hand" index="2" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )
collision_mask = 4

[node name="Stuff" type="Spatial" parent="."]

[node name="Uzi" parent="Stuff" instance=ExtResource( 11 )]
transform = Transform( 0.317106, 0.94839, 0, -0.94839, 0.317106, 0, 0, 0, 1, 0, 3.70127, -9.31093 )

[node name="Table" parent="Stuff" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, -9 )

[node name="UziMag01" parent="Stuff" instance=ExtResource( 12 )]
transform = Transform( 0.298741, 0.954334, 0, -0.954334, 0.298741, 0, 0, 0, 1, -0.723825, 3.79188, -9.13482 )

[node name="UziMag02" parent="Stuff" instance=ExtResource( 12 )]
transform = Transform( 0.298741, 0.954334, 0, -0.954334, 0.298741, 0, 0, 0, 1, -0.723825, 3.79188, -9.32293 )

[node name="UziMag03" parent="Stuff" instance=ExtResource( 12 )]
transform = Transform( 0.298741, 0.954334, 0, -0.954334, 0.298741, 0, 0, 0, 1, -0.723825, 3.79188, -9.53826 )

[node name="UziMag04" parent="Stuff" instance=ExtResource( 12 )]
transform = Transform( 0.298741, 0.954334, 0, -0.954334, 0.298741, 0, 0, 0, 1, -0.723825, 3.79188, -8.94163 )

[node name="Spawns" type="Spatial" parent="."]
[connection signal="has_dropped" from="OVRFirstPerson/Left_Hand/Function_Pickup" to="." method="_on_left_hand_dropped"]
[connection signal="has_picked_up" from="OVRFirstPerson/Left_Hand/Function_Pickup" to="." method="_on_left_hand_picked_up"]
[connection signal="has_dropped" from="OVRFirstPerson/Right_Hand/Function_Pickup" to="." method="_on_Function_Pickup_has_dropped"]
[connection signal="has_picked_up" from="OVRFirstPerson/Right_Hand/Function_Pickup" to="." method="_on_Function_Pickup_has_picked_up"]

[editable path="OVRFirstPerson"]

[editable path="OVRFirstPerson/Right_Hand/Function_Direct_movement"]
